Bug 1056413 - Broadcast system message to notify Gaia when Bluetooth authentication failure occurs. r=shuang, a=2.0+